; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/unix/extr_linux_signals.c_InitSig.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/unix/extr_linux_signals.c_InitSig.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIGHUP = common dso_local global i32 0, align 4
@signal_handler = common dso_local global i32 0, align 4
@SIGQUIT = common dso_local global i32 0, align 4
@SIGILL = common dso_local global i32 0, align 4
@SIGTRAP = common dso_local global i32 0, align 4
@SIGIOT = common dso_local global i32 0, align 4
@SIGBUS = common dso_local global i32 0, align 4
@SIGFPE = common dso_local global i32 0, align 4
@SIGSEGV = common dso_local global i32 0, align 4
@SIGTERM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @InitSig() #0 {
  %1 = load i32, i32* @SIGHUP, align 4
  %2 = load i32, i32* @signal_handler, align 4
  %3 = call i32 @signal(i32 %1, i32 %2)
  %4 = load i32, i32* @SIGQUIT, align 4
  %5 = load i32, i32* @signal_handler, align 4
  %6 = call i32 @signal(i32 %4, i32 %5)
  %7 = load i32, i32* @SIGILL, align 4
  %8 = load i32, i32* @signal_handler, align 4
  %9 = call i32 @signal(i32 %7, i32 %8)
  %10 = load i32, i32* @SIGTRAP, align 4
  %11 = load i32, i32* @signal_handler, align 4
  %12 = call i32 @signal(i32 %10, i32 %11)
  %13 = load i32, i32* @SIGIOT, align 4
  %14 = load i32, i32* @signal_handler, align 4
  %15 = call i32 @signal(i32 %13, i32 %14)
  %16 = load i32, i32* @SIGBUS, align 4
  %17 = load i32, i32* @signal_handler, align 4
  %18 = call i32 @signal(i32 %16, i32 %17)
  %19 = load i32, i32* @SIGFPE, align 4
  %20 = load i32, i32* @signal_handler, align 4
  %21 = call i32 @signal(i32 %19, i32 %20)
  %22 = load i32, i32* @SIGSEGV, align 4
  %23 = load i32, i32* @signal_handler, align 4
  %24 = call i32 @signal(i32 %22, i32 %23)
  %25 = load i32, i32* @SIGTERM, align 4
  %26 = load i32, i32* @signal_handler, align 4
  %27 = call i32 @signal(i32 %25, i32 %26)
  ret void
}

declare dso_local i32 @signal(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
